--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "livegoods-next",
+  "name": "livegoods-tailwind",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,69 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^4.29.1",
+    "@tanstack/react-query-devtools": "^4.29.1",
+    "axios": "^1.3.5",
+    "classnames": "^2.3.2",
+    "cookies-next": "^2.1.1",
+    "dayjs": "^1.11.7",
+    "embla-carousel": "^7.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc11",
+    "embla-carousel-react": "^8.0.0-rc11",
+    "framer-motion": "10.11.5",
+    "lodash": "^4.17.21",
     "next": "13.4.7",
-    "postcss": "8.4.24",
+    "next-compose-plugins": "^2.2.1",
+    "next-i18next": "^7.0.1",
+    "next-intl": "^2.12.0",
+    "next-seo": "^6.0.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-scroll": "^1.8.9",
+    "sharp": "^0.32.0",
+    "yup": "^1.0.2",
+    "zustand": "^3.5.7"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.5.1",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@next/bundle-analyzer": "^13.3.0",
+    "@svgr/cli": "^7.0.0",
+    "@svgr/webpack": "^6.5.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@total-typescript/ts-reset": "^0.4.2",
+    "@types/lodash": "^4.14.192",
+    "@types/node": "20.3.2",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "18.2.14",
+    "@types/react-avatar-editor": "^13.0.0",
+    "@types/react-dom": "18.2.6",
+    "@types/react-scroll": "^1.8.6",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "autoprefixer": "10.4.14",
+    "cross-env": "^7.0.3",
+    "eslint": "8.43.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "13.4.7",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
+    "postcss": "8.4.24",
+    "prettier": "^2.8.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
